--- a/index.html
+++ b/index.html
@@ -5,19 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./index.css" ></link>
-    <title>Namaste React</title>
+    <title>Namaste ReactIt</title>
   </head>
   <body>
+    <script type="module" src="./App.js"></script>
     <div id="root">
-      <script
-        crossorigin
-        src="https://unpkg.com/react@18/umd/react.development.js"
-      ></script>
-      <script
-        crossorigin
-        src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"
-      ></script>
-      <script src="./App.js"></script>
+     
     </div>
   </body>
 </html>
